# lsps

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
include/lsps/: logger.hpp  methodProvider.hpp  router.hpp  server.hpp
include/lsps/methodProviders/: definitionProvider.hpp  hoverProvider.hpp  initializeProvider.hpp  initializedProvider.hpp  method.hpp  shutdownProvider.hpp
include/lsps/models/: emptyParams.hpp  emptyResult.hpp  errorCodes.hpp  errorFactory.hpp
lspSpec/: generateModels.sh  schema.json
lspSpec/baseProtocol/: baseProtocol.json
lspSpec/basicStructures/: basicStructures.json
lspSpec/documentSynchronization/: documentSynchronization.json
lspSpec/languageFeatures/: languageFeatures.json
lspSpec/serverLifecycle/: serverLifecycle.json
lspSpec/windowFeatures/: windowFeatures.json
lspSpec/workspaceFeatures/: workspaceFeatures.json
src/: test_lsps.cpp
src/server/: CMakeLists.txt  methodProvider.hpp  router.cpp  router.hpp  server.cpp  server.hpp
src/server/ioHandler/: ioHandler.hpp  stdIoHandler.hpp
src/server/methodProviders/: hoverProvider.hpp  initializeProvider.hpp  initializedProvider.hpp  method.cpp  method.hpp  shutdownProvider.hpp
src/server/methodProviders/unittest/: test_initializeProvider.cpp  test_initializeProvider.hpp
src/server/models/: CMakeLists.txt  emptyParams.hpp  emptyResult.hpp  errorCodes.hpp  errorFactory.hpp
src/server/requestHandler/: requestHandler.cpp  requestHandler.hpp  router.cpp  router.hpp
src/server/requestHandler/methodHandlers/: initializeHandler.hpp  shutdownHandler.hpp
src/server/test/: test_server.hpp
src/server/unittest/: test_requestHandler.cpp  test_requestHandler.hpp  test_router.cpp  test_router.hpp  test_server.cpp  test_server.hpp
src/unittest/: test_lsps.cpp
